Modified parse to create a instance every new

--- a/.gitignore
+++ b/.gitignore
@@ -107,4 +107,10 @@ atlassian-ide-plugin.xml
 # Crashlytics plugin (for Android Studio and IntelliJ)
 com_crashlytics_export_strings.xml
 
+# Vendor directory
+.vendor
+
+# Goop
+Goopfile
+Goopfile.lock
 
